add fieldset para el form

--- a/desafio/index.html
+++ b/desafio/index.html
@@ -38,58 +38,63 @@
           method="post"
           enctype="text/plain"
         >
-          <label for="name" style="display: block">Nombre:</label>
-          <input
-            type="text"
-            name="Nombre Completo"
-            id="name"
-            placeholder="Nombre Completo"
-          />
+          <fieldset>
+            <legend>
+              <h3>Envianos tu consulta</h3>
+            </legend>
+            <label for="name" style="display: block">Nombre:</label>
+            <input
+              type="text"
+              name="Nombre Completo"
+              id="name"
+              placeholder="Nombre Completo"
+            />
 
-          <label for="email" style="display: block">E-mail:</label>
-          <input
-            type="email"
-            name="E-mail"
-            id="email"
-            placeholder="random@email.com"
-          />
+            <label for="email" style="display: block">E-mail:</label>
+            <input
+              type="email"
+              name="E-mail"
+              id="email"
+              placeholder="random@email.com"
+            />
 
-          <label for="message" style="display: block">Mensaje:</label>
-          <textarea
-            name="Mensaje"
-            id="message"
-            cols="30"
-            rows="10"
-            style="display: block"
-            required
-          ></textarea>
+            <label for="message" style="display: block">Mensaje:</label>
+            <textarea
+              name="Mensaje"
+              id="message"
+              cols="30"
+              rows="10"
+              style="display: block"
+              required
+            ></textarea>
 
-          <input type="submit" value="Enviar" />
+            <input type="submit" value="Enviar" />
 
-          <div class="container-contacto">
-            <h2>Contacto</h2>
-            <span style="display: block">
-              <a
-                href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSMTtdNSXnWpFFjbwdCLWHFfJBVtZgqLtdjxLDTQjCJDdBZvxpjjPgCZSxFnfMgGwPqSWnGf"
-                target="_blank"
-                >iacono.gian13@gmail.com
-              </a>
-            </span>
-
-            <div class="container-redes">
-              <span>
-                <a href="https://github.com/IaconoG" target="_blank">
-                  <i class="fab fa-github"></i>
+            <div class="container-contacto">
+              <h2>Contacto</h2>
+              <span style="display: block">
+                <a
+                  href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSMTtdNSXnWpFFjbwdCLWHFfJBVtZgqLtdjxLDTQjCJDdBZvxpjjPgCZSxFnfMgGwPqSWnGf"
+                  target="_blank"
+                  >iacono.gian13@gmail.com
                 </a>
               </span>
-              <span>
-                <a
-                  href="https://www.linkedin.com/in/iaconogianfranco/"
-                  target="_blank"
-                  ><i class="fab fa-linkedin"></i></a
-              ></span>
+
+              <div class="container-redes">
+                <span>
+                  <a href="https://github.com/IaconoG" target="_blank">
+                    <i class="fab fa-github"></i>
+                  </a>
+                </span>
+                <span>
+                  <a
+                    href="https://www.linkedin.com/in/iaconogianfranco/"
+                    target="_blank"
+                    ><i class="fab fa-linkedin"></i></a
+                ></span>
+              </div>
             </div>
-          </div>
+          </fieldset>
         </form>
       </section>
     </main>
