add: font-size para los icons

--- a/desafio/index.html
+++ b/desafio/index.html
@@ -83,14 +83,14 @@
               <div class="container-redes">
                 <span>
                   <a href="https://github.com/IaconoG" target="_blank">
-                    <i class="fab fa-github"></i>
+                    <i class="fab fa-github" style="font-size: 2rem"></i>
                   </a>
                 </span>
                 <span>
                   <a
                     href="https://www.linkedin.com/in/iaconogianfranco/"
                     target="_blank"
-                    ><i class="fab fa-linkedin"></i></a
+                    ><i class="fab fa-linkedin" style="font-size: 2rem"></i></a
                 ></span>
               </div>
             </div>
