--- a/perfil/index.html
+++ b/perfil/index.html
@@ -10,39 +10,51 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="./styles.css" />
     <title>Perfil</title>
   </head>
   <body>
     <main>
-      <h1>Perfil</h1>
-      <img src="#" alt="foto-de-perfil" />
-      <p>Datos personales:</p>
-      <ul>
-        <li>Iacono Gianfranco</li>
-        <li>23 años</li>
-        <li>iacono.gian13@gmail.com</li>
-      </ul>
-      <h2>Descipcion personal</h2>
-      <p>
-        ¡Hola! Soy Iacono Gianfranco, estudiante de la Universidad Nacional de
-        La Plata, actualmente curso Licenciatura en Informatica y Porgramacion
-        Front End en Nucba.
-      </p>
-
+      <section class="cont-nombre-img">
+        <div class="cont-img">
+          <img src="#" alt="foto-de-perfil" />
+        </div>
+        <div class="cont-nombre">
+          <h1>Iacono Gianfranco</h1>
+        </div>
+      </section>
+      <section class="cont-user-info">
+        <h2>Descipcion personal</h2>
+        <p>
+          ¡Hola! Soy Iacono Gianfranco, estudiante de la Universidad Nacional de
+          La Plata, actualmente curso Licenciatura en Informatica y Porgramacion
+          Front End en Nucba.
+        </p>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis
+          magni, saepe fugit maiores itaque, nisi corrupti provident repudiandae
+          dolor. Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Deleniti tempore eum necessitatibus veniam soluta, pariatur possimus
+          autem libero! Atque soluta quas corporis commodi illo libero nisi
+          rerum labore expedita laudantium.
+        </p>
+      </section>
+      <section class="cont-edu-exp">
+        <h2>Educacion</h2>
+        <h2>Experiencia</h2>
+      </section>
       <!-- https://www.w3docs.com/snippets/html/how-to-create-mailto-forms.html -->
-      <section class="container-formulario">
-        <h2>Formulario de Contacto</h2>
-        <!-- mailto permite enviar un mail desde la app de correo predeterminada -->
-        <form
-          action="mailto:iacono.gian13@gmail.com?subject=Contanto desde formulario"
-          method="post"
-          enctype="text/plain"
-        >
-          <fieldset>
-            <legend>
-              <h3>Envianos tu consulta</h3>
-            </legend>
-            <label for="name" style="display: block">Nombre:</label>
+      <section class="cont-contacto">
+        <section class="cont-contacto-form">
+          <h2>Contacto</h2>
+          <!-- mailto permite enviar un mail desde la app de correo predeterminada -->
+          <form
+            action="mailto:iacono.gian13@gmail.com?subject=Contanto desde formulario"
+            method="post"
+            enctype="text/plain"
+            class="form-contacto"
+          >
+            <label for="name">Nombre:</label>
             <input
               type="text"
               name="Nombre Completo"
@@ -50,7 +62,7 @@
               placeholder="Nombre Completo"
             />
 
-            <label for="email" style="display: block">E-mail:</label>
+            <label for="email">E-mail:</label>
             <input
               type="email"
               name="E-mail"
@@ -58,44 +70,46 @@
               placeholder="random@email.com"
             />
 
-            <label for="message" style="display: block">Mensaje:</label>
+            <label for="message">Mensaje:</label>
             <textarea
               name="Mensaje"
               id="message"
               cols="30"
               rows="10"
-              style="display: block"
               required
             ></textarea>
 
             <input type="submit" value="Enviar" />
+          </form>
+        </section>
+      </section>
 
-            <div class="container-contacto">
-              <h2>Contacto</h2>
-              <span style="display: block">
-                <a
-                  href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSMTtdNSXnWpFFjbwdCLWHFfJBVtZgqLtdjxLDTQjCJDdBZvxpjjPgCZSxFnfMgGwPqSWnGf"
-                  target="_blank"
-                  >iacono.gian13@gmail.com
-                </a>
-              </span>
-
-              <div class="container-redes">
-                <span>
-                  <a href="https://github.com/IaconoG" target="_blank">
-                    <i class="fab fa-github" style="font-size: 2rem"></i>
-                  </a>
-                </span>
-                <span>
-                  <a
-                    href="https://www.linkedin.com/in/iaconogianfranco/"
-                    target="_blank"
-                    ><i class="fab fa-linkedin" style="font-size: 2rem"></i></a
-                ></span>
-              </div>
-            </div>
-          </fieldset>
-        </form>
+      <section class="cont-footer">
+        <div class="cont-footer-redes">
+          <span>
+            <a href="https://github.com/IaconoG" target="_blank">
+              <i class="fab fa-github"></i>
+              github.com/IaconoG
+            </a>
+          </span>
+          <span>
+            <a
+              href="https://www.linkedin.com/in/iaconogianfranco/"
+              target="_blank"
+            >
+              <i class="fab fa-linkedin"></i>
+              linkedin.com/in/iaconogianfranco/
+            </a>
+          </span>
+          <span>
+            <a
+              href="https://mail.google.com/mail/u/0/#inbox?compose=GTvVlcSMTtdNSXnWpFFjbwdCLWHFfJBVtZgqLtdjxLDTQjCJDdBZvxpjjPgCZSxFnfMgGwPqSWnGf"
+              target="_blank"
+              ><i class="fas fa-envelope"></i>
+              iacono.gian13@gmail.com
+            </a>
+          </span>
+        </div>
       </section>
     </main>
   </body>
