add: link en cada ejercicio para volver al menu

--- a/Entregas/Entrega1/ej2-Listas anidadas.html
+++ b/Entregas/Entrega1/ej2-Listas anidadas.html
@@ -67,6 +67,7 @@
       </section>
     </main>
     <footer>
+      <p><a href="../index.html">Regresar al menu de ejercicios</a></p>
       <p>Iacono Gianfranco - Nucba 2023</p>
     </footer>
   </body>
